# resume-scorer

./: app.py  pyproject.toml
